Upgrade to Lucene 7.7.x - Compilation ok - Tests Nok